dark mode only, text loading and work section bug fixed

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -1,10 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
-}
+} */
 
 @media (prefers-color-scheme: dark) {
   :root {
